# KF-GINS

./: .gitignore  export_to_geojson.py  未命名绘图.drawio
config/: kf-gins.yaml
dataset/: kf-gins.yaml
dataset_yaw/: calspeed.py  gnss.txt  kf-gins.yaml  kf-gins_lxf.yaml  nav_read.py
docs/: 04_组合导航卡尔曼滤波详解.md  Madgwick_Filter_Analysis_and_Tuning.md  Mahony解析和调优.md  导航比对.docx
gnss_ins/: CMakeLists.txt
lib/: libabsl_cordz_info  libabsl_log
new_data/: KF_GINS_IMU_ERR.txt  KF_GINS_Navresult.nav  KF_GINS_Navresult_no_speed.nav  gnss.txt  kf-gins.yaml  lat_lon.csv  lat_lon_no_speed.csv
src/: kf_gins.cpp
src/common/: earth.h  rotation.h  types.h
src/fileio/: filebase.h  fileloader.cc  fileloader.h  gnssfileloader.h  imufileloader.h  vehspeedfileloader.h
src/kf-gins/: Zupt.cpp  Zupt.h  gi_engine.cpp  gi_engine.h  insmech.cpp  kf_gins_types.h
